template/k8s-cluster/k8s-config-service.yml
apiVersion: v1
kind: Service
metadata:
  name: configuration-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8888
  selector:
    app: configuration
    tier: backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: configuration-deployment
spec:
  revisionHistoryLimit: 3
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 50%
  template:
    metadata:
      labels:
        app: configuration
        tier: backend
    spec:
      containers:
      - name: configuration
        image: @DOCKER_REPOSITORY@/configuration-service:@VERSION_CONFIG_SERVICE@
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health.json
            port: 8888
            scheme: HTTP
          periodSeconds: 30
          timeoutSeconds: 60
        resources:
          requests:
            cpu: 200m
            memory: 256M
          limits:
            cpu: 400m
            memory: 512M
        ports:
        - containerPort: 8888
