template/k8s-cluster/k8s-iat-wiris.yml
# Add a Service/Deployment for the AP_ItemManagementService
apiVersion: v1
kind: Service
metadata:
  name: ap-wiris-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: ap-wiris-service
    tier: backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ap-wiris-service-deployment
spec:
  revisionHistoryLimit: 2
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 50%
  template:
    metadata:
      labels:
        app: ap-wiris-service
        tier: backend
    spec:
      containers:
      - name: ap-ims
        image: @DOCKER_REPOSITORY@/ap-wiris-engine:@VERSION_IAT_WIRIS@
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          periodSeconds: 120
          timeoutSeconds: 120
        resources:
          requests:
            cpu: 200m
            memory: 1024M
          limits:
            cpu: 400m
            memory: 2048M
        ports:
        - containerPort: 8080
