template/k8s-cluster/k8s-item-report-job.yml
apiVersion: v1
kind: Service
metadata:
  name: item-report-job-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: item-report-job
    tier: backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: item-report-job-deployment
spec:
  revisionHistoryLimit: 2
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 50%
  template:
    metadata:
      labels:
        app: item-report-job
        tier: backend
    spec:
      containers:
      - name: ap-item-report-job
        image: @DOCKER_REPOSITORY@/ap-item-report-job:@VERSION_IRJ@
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /manage/health.json
            port: 8080
            scheme: HTTP
          periodSeconds: 120
          timeoutSeconds: 120
        resources:
          requests:
            cpu: 200m
            memory: 1024M
          limits:
            cpu: 400m
            memory: 2048M
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /ItemReportJob
          name: itembank
      volumes:
      - name: itembank
        persistentVolumeClaim:
          claimName: iat-efs-report-volume
