template/k8s-cluster/k8s-item-viewer-proxy.yml
apiVersion: v1
kind: Service
metadata:
  name: item-viewer-proxy-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: item-viewer-proxy
    tier: backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: item-viewer-proxy-deployment
spec:
  revisionHistoryLimit: 2
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 50%
  template:
    metadata:
      labels:
        app: item-viewer-proxy
        tier: backend
    spec:
      containers:
      - name: ap-item-viewer-proxy
        image: @DOCKER_REPOSITORY@/ap-item-viewer-proxy:@VERSION_IVP@
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /manage/health.json
            port: 8080
            scheme: HTTP
          periodSeconds: 120
          timeoutSeconds: 120
        resources:
          requests:
            cpu: 200m
            memory: 1024M
          limits:
            cpu: 400m
            memory: 2048M
        ports:
        - containerPort: 8080
