template/k8s-cluster/k8s-ivs.yml
apiVersion: v1
kind: Service
metadata:
  name: ap-ivs-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: ap-ivs
    tier: backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ap-ivs-deployment
spec:
  revisionHistoryLimit: 2
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 50%
  template:
    metadata:
      labels:
        app: ap-ivs
        tier: backend
    spec:
      containers:
      - name: ap-ivs
        image: osucass/ap_itemviewerservice:@VERSION_IVS@
        readinessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          periodSeconds: 120
          timeoutSeconds: 120
        resources:
          requests:
            cpu: 200m
            memory: 1024M
          limits:
            cpu: 400m
            memory: 2048M
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /home/tomcat7/content/
          name: itembank
      volumes:
      - name: itembank
        persistentVolumeClaim:
          claimName: iat-efs-volume
